line up Share links on desktop, make sure article-tags doesn’t overlap

--- a/web/app/themes/ihc/assets/styles/pages/_single-post.scss
+++ b/web/app/themes/ihc/assets/styles/pages/_single-post.scss
@@ -4,7 +4,7 @@
   position: relative;
   .share {
     display: block;
-    margin-top: 20px;
+    margin-top: 18px;
   }
   #map {
     display: block;
@@ -13,6 +13,9 @@
     .share {
       float: right;
       margin-top: -20px;
+    }
+    .article-tags {
+      padding-right: 130px;
     }
     aside.main {
       margin: 0 0 100px;
